# htmx-testing

./: .gitignore  Cargo.toml  Dockerfile  bun.lockb  justfile  package.json  tailwind.config.js
public/: output.css
src/: lib.rs  main.rs  tailwind.css
src/handlers/: mod.rs
src/templates/: blogs.rs  mod.rs  utils.rs
src/views/: app.rs
templates/: base.html  blogs.html  live_reload.html
tests/api/: health_check.rs
