[package]
name = "htmx_testing"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
askama = { version = "0.12.1", features = ["with-axum", "mime", "mime_guess"] }
askama_axum = "0.4.0"
axum = { version = "0.7.4", features = ["macros", "http2"] }
flate2 = "1.0.26"
futures = "0.3.30"
log = "0.4.19"
once_cell = "1.18.0"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.43"
tokio = { version = "1.28.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = [
  "trace",
  "cors",
  "compression-gzip",
  "compression-br",
  "fs",
] }
tower-request-id = "0.3.0"
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = [
  "registry",
  "env-filter",
] }

[package.metadata.leptos]
output-name = "htmx_testing"
